Archive2/fb/f034d26a6b2677/output
main.cpp:4:34: error: 'this' cannot be used in a static member function declaration
  static auto bar() -> decltype(*this);
                                 ^
1 error generated.
